syntax = "proto3";
package ibc.lightclients.corda.v1;

option go_package = "github.com/cosmos/cosmos-sdk/x/ibc/light-clients/xx-corda/types";

import "ibc/lightclients/corda/v1/corda-types.proto";
import "google/protobuf/empty.proto";

service NodeService {
  rpc PartiesFromName (PartiesFromNameRequest) returns (PartiesFromNameResponse);
}

service IbcService {
  rpc CreateGenesis (CreateGenesisRequest) returns (CreateGenesisResponse);
  rpc CreateHostAndBank (CreateHostAndBankRequest) returns (google.protobuf.Empty);
  rpc AllocateFund (AllocateFundRequest) returns (google.protobuf.Empty);
}

message PartiesFromNameRequest {
  string name = 1;
  bool exact_match = 2;
}

message PartiesFromNameResponse {
  repeated Party parties = 1;
}

message CreateGenesisRequest {
  repeated Party participants = 1;
}

message CreateGenesisResponse {
  StateRef base_id = 1;
}

message CreateHostAndBankRequest {
  StateRef base_id = 1;
}

message AllocateFundRequest {
  StateRef base_id = 1;
  string owner = 2;
  string denom = 3;
  string amount = 4;
}